Adding metatags to frame

--- a/FRAME_NODE/public/index.html
+++ b/FRAME_NODE/public/index.html
@@ -1,6 +1,6 @@
 <meta property="fc:frame" content="vNext" />
-<meta property="fc:frame:image" content="http://3.11.141.24/images/question.png" />
-<meta property="fc:frame:button:1" content="Green" />
-<meta property="fc:frame:button:2" content="Purple" />
-<meta property="fc:frame:button:3" content="Red" />
-<meta property="fc:frame:button:4" content="Blue" />
+<meta property="fc:frame:image" content="http://3.11.141.24:3000/images/question.png" />
+<meta property="og:image" content="http://3.11.141.24:3000/images/question.png" />
+<meta property="fc:frame:button:1" content="Approve" />
+<meta property="fc:frame:button:2" content="Regect" />
+<meta property="fc:frame:post_url" content="http://3.11.141.24:3000/"
